# moosbi

./: LICENSE  README.md  TODO.md  pyproject.toml
.windsurf/rules/: workspace.md
moosbi/: __init__.py  examples.py  moo.py  params.py  sbi.py  scip.py  simulator.py  viz.py
notebooks/: bitarget2d.ipynb  ou_example.ipynb  scip_demo.ipynb
